<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="app_name">白板</string>
    <string name="title_activity_mymap">MyMapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_map_map">地图</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_changepassword_changepassword">修改密码</string>
    <string name="original_password_changepassword">原密码</string>
    <string name="new_password_changepassword">新密码</string>
    <string name="confirm_password_changepassword">确认新密码</string>
    <string name="button_change_password_ChangePassword">确认修改</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_login_login">登录</string>
    <string name="user_name_login">用户名</string>
    <string name="password_login">密码</string>
    <string name="button_login_login">登录</string>
    <string name="link_text_login">没有账号？点我注册</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_changepassword_register">注册</string>
    <string name="phone_or_email_register">手机/邮箱</string>
    <string name="user_name_register">用户名</string>
    <string name="password_register">密码</string>
    <string name="confirm_password_register">确认密码</string>
    <string name="button_register_register">注册</string>
    <string name="link_text_register">已有账号？点我登录</string>
    <string name="title_publish">发布</string>
    <string name="word_number">0/280</string>
    <string name="title_activity_publish2">Publish2</string>
    <string name="title_activity_publish">Publish</string>
    <string name="prompt_classes_publish2">选择一个类别</string>
    <string name="prompt_limit_publish2">隐私设置</string>
    <string name="business_classes_publish2">商业信息</string>
    <string name="makefriend_classes_publish2">交友信息</string>
    <string name="help_classes_publish2">互助信息</string>
    <string name="personal_classes_publish2">个人状态</string>
    <string name="justme_limit_publish2">仅我可见</string>
    <string name="ifollw_limit_publish2">仅我关注的可见</string>
    <string name="open_limit_publish2">公开</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_information">纸条详情</string>
    <string name="username_information">用户名</string>
    <string name="helpful_number_information">0</string>
    <string name="unhelpful_number_information">0</string>
    <string name="address_create_information">创建于：</string>
    <string name="address_exist_information">发布在：</string>
    <string name="information_information">努力加载中，请稍后...</string>
    <string name="time_information"></string>
    <string name="time_of_sound_information">16</string>
    <string name="discuss_number_information">评论</string>
    <string name="username_Discuss">xxx</string>
    <string name="answer_discuss">回复</string>
    <string name="information_Discuss"></string>
    <string name="time_discuss"></string>
    <string name="address_publish">当前位置:尚未获得</string>
    
    <string name="title_follow_follow">关注</string>
    <string name="text_following_follow">我关注的</string>
    <string name="text_followed_follow">关注我的</string>
    
    <string name="title_profile_profile">资料</string>
    <string name="profile_my_favorite">我收藏的纸条</string>
    <string name="profile_my_published">我发布的纸条</string>
    <string name="profile_my_commented">我评论的纸条</string>
    <string name="profile_ta_favorite">TA收藏的纸条</string>
    <string name="profile_ta_published">TA发布的纸条</string>
    <string name="profile_ta_commented">TA评论的纸条</string>
    
    <string name="title_set_set">设置</string>
    <string name="preference_button_change_password">修改密码</string>
    <string name="preference_button_change_followable">关注设置</string>
    <string name="preference_button_change_default_category">默认查看信息类别</string>
    <string name="preference_button_show_new">新手指引</string>
    <string name="preference_button_help">帮助</string>
    <string name="preference_button_about">关于</string>
    <string name="preference_list_allow_follow">允许别人关注我</string>
    <string name="preference_list_disallow_follow">不允许别人关注我</string>
    <string name="preference_list_category_1">商业信息</string>
    <string name="preference_list_category_2">个人状态</string>
    <string name="preference_list_category_3">交友信息</string>
    <string name="preference_list_category_4">互助信息</string>
    <string name="label_logout">退出登录</string>
    <string name="label_login">登陆</string>
    <string name="logout_confirm">确认注销？</string>
    
    <string name="category_name_commercial">商业信息</string>
    <string name="category_name_personal">个人状态</string>
    <string name="category_name_friend">交友信息</string>
    <string name="category_name_help">互助信息</string>
    
    <string name="title_about">关于</string>
    
    <string name="title_help">帮助</string>
    <string name="first_question_help">什么是白板？</string>
    <string name="first_answer_help">白板是一款以地理坐标为基础的信息交流软件。可以进行社交、求助、商业等活动.团购差人吗？闲置的物品待出售吗？贴一张纸条在指定地点就行。</string>
    <string name="second_question_help">什么是可见地点？</string>
    <string name="second_answer_help">对于用户来说，在地图上500m范围内的纸条可见，如果需要扩大可视地点或增加可见地点，版本升级后会提供相应渠道。</string>
    <string name="third_question_help">什么是“扔出去”？</string>
    <string name="third_answer_help">在非当前位置的可见地点内选择一个地点发布纸条的行为。</string>
    <string name="fourth_question_help">什么是信息时效？</string>
    <string name="fourth_answer_help">每张纸条有一定存活期，好评数越多，存活期越长。差评数越多，存活期越短。此为信息时效。</string>
    
    <string name="symble_play">▶</string>
    <string name="symble_stop">◼</string>


</resources>
