<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_background" > <!--  背景  -->

    <!-- TitleBar -->

    <RelativeLayout
        android:id="@+id/backgroundChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_title_background" >

        <TextView
            android:id="@+id/changepasswordChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_changepassword_changepassword"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/backChangePassword"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:src="@drawable/style_title_button_back" 
            android:background="@null"/>
        
    </RelativeLayout>

    <!-- 输入框组 -->

    <LinearLayout
        android:id="@+id/contentChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <!-- 原密码 -->

        <EditText
            android:id="@+id/firstbuttonChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_button_texbox_first_act"
            android:ellipsize="end"
            android:hint="@string/original_password_changepassword"
            android:paddingLeft="17dp"
            android:password="true"
            android:singleLine="true"
            android:textColorHighlight="#0099cc"
            android:textColorHint="#aaaaaa"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_line_cutoff" />  <!--  分割线  -->


        <!-- 新密码 -->

        <EditText
            android:id="@+id/secondbuttonChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_button_texbox_second_act"
            android:ellipsize="end"
            android:hint="@string/new_password_changepassword"
            android:paddingLeft="17dp"
            android:password="true"
            android:singleLine="true"
            android:textColorHighlight="#0099cc"
            android:textColorHint="#aaaaaa"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_line_cutoff" /> <!-- 分割线 -->


        <!-- 确认新密码 -->

        <EditText
            android:id="@+id/thirdbuttonChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_button_texbox_third_act"
            android:ellipsize="end"
            android:hint="@string/confirm_password_changepassword"
            android:paddingLeft="17dp"
            android:password="true"
            android:singleLine="true"
            android:textColorHighlight="#0099cc"
            android:textColorHint="#aaaaaa"
            android:textSize="16dp" />
        
    </LinearLayout>

        <!-- 修改按鈕 -->

    <RelativeLayout
        android:id="@+id/changepasswordboxNotLoggedInSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="100dp"
        android:paddingBottom="100dp">

        <ImageButton
            android:id="@+id/changepasswordbuttonChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button_blue" />

        <TextView
            android:id="@+id/changepasswordcontentChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/button_change_password_ChangePassword"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/indicator"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/changepasswordcontentChangePassword" 
            android:visibility="gone"/>
        
    </RelativeLayout>
    
</RelativeLayout>